1.4/_sources/min_dependency_substitutions.rst.txt
.. |NumpyMinVersion| replace:: 1.19.5
.. |ScipyMinVersion| replace:: 1.6.0
.. |JoblibMinVersion| replace:: 1.2.0
.. |ThreadpoolctlMinVersion| replace:: 2.0.0
.. |CythonMinVersion| replace:: 3.0.8
.. |MatplotlibMinVersion| replace:: 3.3.4
.. |Scikit-imageMinVersion| replace:: 0.17.2
.. |PandasMinVersion| replace:: 1.1.5
.. |SeabornMinVersion| replace:: 0.9.0
.. |Memory_profilerMinVersion| replace:: 0.57.0
.. |PytestMinVersion| replace:: 7.1.2
.. |Pytest-covMinVersion| replace:: 2.9.0
.. |RuffMinVersion| replace:: 0.0.272
.. |BlackMinVersion| replace:: 23.3.0
.. |MypyMinVersion| replace:: 1.3
.. |PyamgMinVersion| replace:: 4.0.0
.. |PolarsMinVersion| replace:: 0.19.12
.. |PyarrowMinVersion| replace:: 12.0.0
.. |SphinxMinVersion| replace:: 6.0.0
.. |Sphinx-copybuttonMinVersion| replace:: 0.5.2
.. |Sphinx-galleryMinVersion| replace:: 0.15.0
.. |NumpydocMinVersion| replace:: 1.2.0
.. |PillowMinVersion| replace:: 7.1.2
.. |PoochMinVersion| replace:: 1.6.0
.. |Sphinx-promptMinVersion| replace:: 1.3.0
.. |Sphinxext-opengraphMinVersion| replace:: 0.4.2
.. |PlotlyMinVersion| replace:: 5.14.0
.. |Conda-lockMinVersion| replace:: 2.4.2
